--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "headlessui-datepicker",
   "version": "0.1.0",
-  "private": true,
+  "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
